# blob-sync-service

./: .gitignore  .pre-commit-config.yaml  README.md  config-sample.yaml  pyproject.toml
.github/workflows/: ci.yml
blob_sync_service/: __main__.py  chunker.py  config.py  db.py  manager.py  queuer.py  service.py  uploader.py  watcher.py
systemd/: blob-sync-sample.service
tests/: conftest.py  test_chunker.py  test_db.py  test_e2e.py  test_manager.py  test_queuer.py  test_uploader.py  test_watcher.py
